--- a/templates/addempoutput.html
+++ b/templates/addempoutput.html
@@ -3,7 +3,7 @@
 <head>
     <title>Add Emp Output</title>
 </head>
-<body style="background-image: url('{{ url_for('static', filename='background.jpg') }}'); background-size: cover;">
+<body style="{{ background }}">
     <center>
         <font color="DodgerBlue" size="5" style="font-family: avenir">
             <h1>The employee {{ name }} was successfully added to the database</h1>
