--- a/templates/getemp.html
+++ b/templates/getemp.html
@@ -3,7 +3,7 @@
 <head>
     <title>Get Employee Information</title>
 </head>
-<body style="background-image: url('{{ url_for('static', filename='background.jpg') }}'); background-size: cover;">
+<body style="{{ background }}">
     <center>
         <font color="black" size="5" style="font-family: avenir">
             <h1 style="color: DodgerBlue">Employee Information</h1>
